src/objects/FA_FV_Detail__c/FA_FV_Detail__c.object-meta.xml
<CustomObject>
    <label>FV/FA Detail</label>
    <nameField>
        <displayFormat>FV/FA Analysis - {0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FV/FA Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>