src/objects/FA_FV_Detail__c/fields/FA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>