src/objects/FA_FV_Detail__c/fields/FA_FV__c.field-meta.xml
<CustomField>
    <fullName>FA_FV__c</fullName>
    <label>FV/FA</label>
    <referenceTo>FA_FV_Analysis__c</referenceTo>
    <relationshipLabel>FV/FA Details</relationshipLabel>
    <relationshipName>FA_FV_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>