src/objects/FA_FV_Detail__c/fields/FA_FV_Notes__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Notes__c</fullName>
    <inlineHelpText>These are notes specific to this serial number for the FA / FV performed on this</inlineHelpText>
    <label>FV/FA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>