src/objects/FA_FV_Detail__c/fields/FA_FV_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Record_Type__c</fullName>
    <formula>FA_FV__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FV/FA Record Type</label>
    <type>Text</type>
</CustomField>