src/objects/FA_FV_Detail__c/fields/FA_FV_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Type__c</fullName>
    <formula>FA_FV__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the FA / FV type being conducted on this record. Pulled from the FA / FV</inlineHelpText>
    <label>FV/FA Type</label>
    <type>Text</type>
</CustomField>