src/objects/FA_FV_Detail__c/fields/FA_FV_Type_Col__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Type_Col__c</fullName>
    <label>FV/FA Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>