src/objects/FA_FV_Detail__c/fields/OperatingTime__c.field-meta.xml
<CustomField>
    <fullName>OperatingTime__c</fullName>
    <label>Operating Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>