src/objects/FA_FV_Detail__c/fields/Relevant_Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Vendor_Contact__c</fullName>
    <label>Relevant Vendor Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>