src/objects/FA_FV_Detail__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>This is the serial number to which this FA / FV is relevant</inlineHelpText>
    <label>Serial Number</label>
    <referenceTo>Serial_Number__c</referenceTo>
    <relationshipName>FA_FV_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>