src/objects/FA_FV_Detail__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>text(  FA_FV__r.Site__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the site at which the FA / FV is being performed</inlineHelpText>
    <label>Site</label>
    <type>Text</type>
</CustomField>