src/objects/FA_FV_Detail__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>