src/objects/FA_FV_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Please select the status for this FA or FV subject to the following guidance:
-  
-  
-</inlineHelpText>
    <label>Detail Status (Junction)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Evaluating</fullName>
                <isActive>false</isActive>
                <label>Evaluating</label>
            </value>
            <value>
                <fullName>Finalizing</fullName>
                <isActive>false</isActive>
                <label>Finalizing</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>