src/objects/FA_FV_Detail__c/fields/Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Suppliers__c</fullName>
    <label>Suppliers</label>
    <type>TextArea</type>
</CustomField>