src/objects/FA_FV_Detail__c/fields/Vendor_Ship_to_addres__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Ship_to_addres__c</fullName>
    <label>Vendor Ship-to address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>