src/objects/FA_FV_Detail__c/recordTypes/FA_FV_Detail.recordType-meta.xml
<RecordType>
    <fullName>FA_FV_Detail</fullName>
    <active>true</active>
    <label>FA/FV Detail</label>
</RecordType>