src/objects/FA_FV_Detail__c/recordTypes/FA_FV_Detail_Readonly.recordType-meta.xml
<RecordType>
    <fullName>FA_FV_Detail_Readonly</fullName>
    <active>true</active>
    <label>FA / FV Detail Readonly</label>
</RecordType>