src/objects/FA_FV_Detail__c/listViews/Open_FA_FV.listView-meta.xml
<ListView>
    <fullName>Open_FA_FV</fullName>
    <columns>NAME</columns>
    <columns>FA_FV__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Site__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Open FA  / FV Sydney</label>
</ListView>